welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: ')' expected but '}' found.
			if (estFaceMur()) {while (estFaceMur() {droite()}} else {x=true}
                                                                         ^